fix wildfly problems